--- a/demo-1/index.html
+++ b/demo-1/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="layer-part-1">
                     <h1 class="layer-1-head-color">
-                        I will Do Coding and Change The World
+                        I will Do Coding and I love to do it
                     </h1>
                     <p class="layer-1-head-para">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
